force-app/main/default/objects/ProductDiscount__c/ProductDiscount__c.object-meta.xml
<CustomObject>
    <description>This datatable is used for the Cards business line, to allow discount mapping for each Product</description>
    <label>Product Discount</label>
    <nameField>
        <displayFormat>PD-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products Discount</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>