force-app/main/default/objects/ProductDiscount__c/fields/DiscountUnit__c.field-meta.xml
<CustomField>
    <fullName>DiscountUnit__c</fullName>
    <description>Unit of measure of this discount</description>
    <label>Discount Unit</label>
    <length>10</length>
    <type>Text</type>
</CustomField>