force-app/main/default/objects/ProductDiscount__c/fields/DiscountValue__c.field-meta.xml
<CustomField>
    <fullName>DiscountValue__c</fullName>
    <description>Value of this discount (5% for example)</description>
    <label>Discount Value</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>