force-app/main/default/objects/ProductDiscount__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field determines if this discount is active or not</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>