force-app/main/default/objects/ProductDiscount__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The product in which this discount will be applied</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products Discount</relationshipLabel>
    <relationshipName>ProductsDiscount</relationshipName>
    <type>Lookup</type>
</CustomField>