force-app/main/default/objects/ProductDiscount__c/fields/QuantityOfCriteria__c.field-meta.xml
<CustomField>
    <fullName>QuantityOfCriteria__c</fullName>
    <description>Quantity of active criterias that need to be met in order to apply this discount to a product</description>
    <label>Quantity of Criteria</label>
    <summaryFilterItems>
        <field>ProductDiscountCriteria__c.IsActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>ProductDiscountCriteria__c.ProductDiscount__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>