force-app/main/default/objects/ProductDiscount__c/listViews/AllProductsDiscount.listView-meta.xml
<ListView>
    <fullName>AllProductsDiscount</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>DiscountValue__c</columns>
    <columns>DiscountUnit__c</columns>
    <columns>IsActive__c</columns>
    <columns>QuantityOfCriteria__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products Discount</label>
</ListView>